<resources>
    <string name="app_name">My Term Planner</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="term_title">Term Title</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="wgu_c196">WGU C196</string>
    <string name="are_you_sure">Are you sure you want to delete?</string>
    <string name="course_title">Course Title</string>
    <string name="assessments">Assessments</string>
    <string name="courses">Courses</string>
    <string name="details">Details</string>
    <string name="notes">Notes</string>
    <string name="assessment_title">Assessment Title</string>
    <string name="term_editor">Term Editor</string>
    <string name="course_editor">Course Editor</string>
    <string name="assessment_editor">Assessment Editor</string>
    <string name="terms">Terms</string>
    <string name="upcoming_events">Upcoming Events</string>
    <string name="manage">Manage</string>
    <string name="past_events">Past Events</string>
    <string name="todays_events">Today\'s Events</string>
    <string name="phones">Phones</string>
    <string name="emails">Emails</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="prof_editor">Contact Editor</string>
    <string name="profs">Contacts</string>
    <string name="phone_type">Phone type</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_editor">Phone Editor</string>
    <string name="email_editor">Email Editor</string>
    <string name="add_prof">Add Contact</string>
    <string name="do_delete">Do you want to delete this item?</string>
    <string name="create_prof">Create Contact</string>
    <string name="create_term">Create Term</string>
    <string name="user_prefs">User Preferences</string>
    <string name="upcoming_active_events">Active/Upcoming Events</string>
    <string name="active_future_events">Active/Future Events</string>
    <string name="deleted">Deleted</string>
    <string name="email_address">Email Address</string>
    <string name="email_type">Email Type</string>
    <string name="error_empty_email">Email can\'t be empty</string>
    <string name="error_empty_phone_num">Phone Number can\'t be empty</string>
    <string name="error_empty_first_name">First Name cannot be empty</string>
    <string name="error_empty_last_name">Last Name cannot be empty</string>
    <string name="delete_prof">Delete Contact</string>
    <string name="add_phone">Add Phone</string>
    <string name="add_email">Add Email</string>
    <string name="saved">Saved</string>
    <string name="error_empty_title">Title cannot be empty</string>
    <string name="create_assessment">Create Assessment</string>
    <string name="delete_assessment">Delete Assessment</string>
    <string name="add_reminder">Add Reminder</string>
    <string name="notification_date">Notification Date</string>
    <string name="custom_date">Custom Date</string>
    <string name="default_tab">Default Tab</string>
    <string name="user_prefs_note1">Note: Negative values will show past events</string>
    <string name="num_days">Default Range in Days</string>
    <string name="num_days_range">Range: -365 to 365</string>
    <string name="error_alarm_failed">Failed to create notification</string>
    <string name="reminder_header">Select Field and Time</string>
    <string name="about">About</string>
    <string name="error_alarm_before">Cannot set a notification for a date/time before now</string>
    <string name="create_course">New Course</string>
    <string name="delete_all_assessments">Delete All Assessments</string>
    <string name="delete_course">Delete Course</string>
    <string name="add_assessment">Add Assessment</string>
    <string name="error_delete_course">Cannot delete a course that has assessments</string>
    <string name="deleted_all_assessments">Deleted All Assessments</string>
    <string name="error_no_assessments">This course has no assessments</string>
    <string name="added_prof">Added Contact to course</string>
    <string name="deleted_prof">Deleted Contact from course</string>
    <string name="delete_all_courses">Delete All Courses</string>
    <string name="delete_term">Delete Term</string>
    <string name="add_course">Add Course</string>
    <string name="error_delete_term">Cannot delete a term that has courses</string>
    <string name="deleted_all_courses">Deleted All Courses</string>
    <string name="error_no_courses">This term has no courses</string>
    <string name="tasks">Tasks</string>
    <string name="create_task">Create Task</string>
    <string name="delete_task">Delete Task</string>
    <string name="task_editor">Task Editor</string>
    <string name="task_title">Title</string>
    <string name="notification_msg">Notification Message</string>
    <string name="course_status">Course Status</string>
    <string name="assessment_type">Assessment Type</string>
    <string name="prof_title">Title</string>
    <string name="reminders">Reminders</string>
    <string name="deleted_alarm">Deleted Reminder</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="notification_time">Notification Time</string>
    <string name="at">at</string>
    <string name="share">Share</string>
    <string name="settings">Settings</string>
    <string name="preferenceSaveFailed">Failed to save preferences</string>
    <string name="invalidDays">Invalid number of days</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="auto">Auto</string>
    <string name="always">Always</string>
    <string name="never">Never</string>
    <string name="off">OFF</string>
    <string name="on">ON</string>
    <string name="notification_type">Notification Type</string>
    <string name="normal">Normal</string>
    <string name="alarm">Alarm</string>
    <string name="home_page">Home Page</string>
    <string name="user_interface">User Interface</string>
    <string name="theme">Theme</string>
    <string name="night_mode">Night Mode</string>
    <string name="toolbar_option">Hide Toolbar on Scroll</string>
    <string name="tab_option">Hide Tabs on Scroll</string>
    <string name="notifications">Notifications</string>
    <string name="led_color">LED Color</string>
    <string name="vibrate_pattern">Vibrate Pattern (ms)</string>
    <string name="default_reminder_type">Default Reminder Type</string>
    <string name="error_vibrate_pattern_long">Single vibrate has to be less than 3000ms</string>
    <string name="error_vibrate_pattern_length">Vibrate pattern too long</string>
    <string name="send_test_notification">Send Test Notification</string>
    <string name="general">General</string>
    <string name="school_mode">School Mode</string>
    <string name="quick_reminder">Quick Reminder</string>
    <string name="msg_required">Message is required</string>
    <string name="contacts">Contacts</string>
    <string name="add_contact">Add Contact</string>
    <string name="no_contacts">No Contacts Available</string>
    <string name="send_email">Send Email</string>
    <string name="dial">Dial</string>
    <string name="green">Green</string>
    <string name="calendar">Calendar</string>
    <string name="title_prefix">Today to</string>
    <string name="title_suffix">to Today</string>
</resources>
